# smart_door

./: CMakeLists.txt
main/: CMakeLists.txt  bluetooth.c  bluetooth.h  buzzer.c  buzzer.h  keypad.c  keypad.h  ldr.c  ldr.h  light.c  light.h  main.c  main.txt  main_test.txt  main_test_buzzer.txt  main_without_modes.txt  pir.c  pir.h  servo.c  servo.h  test_withoutBLE.txt  ultrasonic.c  ultrasonic.h
