idf_component_register(SRCS "main.c"
                            "light.c"
                            "pir.c"
                            "buzzer.c"
                            "keypad.c"
                            "servo.c"
                            "ldr.c"
                            "bluetooth.c"
                    INCLUDE_DIRS ".")
