idf_component_register(SRCS "main.c"
                            "light.c"
                            "ultrasonic.c"
                            "buzzer.c"
                            "keypad.c"
                            "servo.c"
                            "ldr.c"
                    INCLUDE_DIRS ".")
